--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.8.7+5
   image_cropper: ^4.0.1
   flutter_tesseract_ocr: ^0.4.23
+  google_mlkit_text_recognition: ^0.8.1
 
 dev_dependencies:
   flutter_test:
